--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 6.1：
 
-海岛甜心 - 海岛甜心
+海岛甜心 - 灰姑娘的眼泪
 
 作词: 天天
 作曲: 包小柏
@@ -20,8 +20,7 @@ Try 一次次一次次 伤过的心<br>
 
 十二点 哭和笑的界线<br>
 你的吻从此不再出现<br>
-Love is over
-
+Love is over<br>
 Dreams never come ture
 
 他的出现 你的转变<br>
@@ -31,8 +30,7 @@ Dreams never come ture
 
 爱情的玻璃鞋在哪呢<br>
 我的泪透着光期待着<br>
-Love is over
-
+Love is over<br>
 Dreams never come ture
 
 你的离开 让我觉得<br>
