--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,12 @@
+
+
+为什么有人会嘲讽英国高铁 HS2 ? - 胡勃进制空间的回答  <br>
+https://www.zhihu.com/question/664354059/answer/40725841945
+
+胡勃进制空间：
+你们嘲讽英国高铁是因为它没修起来，我黑它是因为我认为它就不该立项。。 一重离谱：现有的从伦敦到伯明翰的快车是真的能一个小时出头就到的（参见附图），你把一小时缩短成半小时，创造的经济效益可能很有限。 当然有人说了，通到伯明翰之后就可以继续通到曼彻斯特、通到苏格兰，这经济效益不就来了？ 二重离谱：确实，但是伯明翰以北的项目被砍了…阅读全文​
+
+-------
 试析中国封建制解体的原因 <br>
 https://wenku.baidu.com/view/562cd49c5cbfc77da26925c52cc58bd63086934c.html
 
