--- a/text/挑战.md
+++ b/text/挑战.md
@@ -5,6 +5,13 @@
 万人大合唱大明不妙曲《此去半生》<br>
 https://www.bilibili.com/video/BV1EgRsY1EBc/
 
+此去半生太凄凉 <br>
+花落惹人断肠<br>
+你我天涯各一方<br>
+我追着你的月光 <br>
+泪却湿了眼眶<br>
+往事随风怎能忘<br>
+
 ------
 有人做过近代欧氏几何的428和431吗？
 
