--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,8 @@
+为什么志村五郎与威廉·瑟斯顿说数学竞赛中有些问题人为编造的味道太浓,不是实际数学研究中会碰到的问题? - snort的回答  <br>
+https://www.zhihu.com/question/605167479/answer/3132239902
 
+snort：
+所谓数学竞赛锻炼思维的作用被拔高了。 IMO的获奖和后来成为ICM speaker的正相关很高并不是因为数学竞赛的训练作用，而是因为数学竞赛的选拔作用。 并不是因为解题训练培养了数学家，而是因为有数学家特质的人更容易在解题比赛中成功。 ——————— 另外数学竞赛往往追求巧劲，而数学研究追求纯粹的力量。因为数学研究会不断推广研…阅读全文​
 
 为什么有人会嘲讽英国高铁 HS2 ? - 胡勃进制空间的回答  <br>
 https://www.zhihu.com/question/664354059/answer/40725841945
