--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+五子棋如果改成六子棋或者n子棋可以无限下吗? - hzy的回答 <br>
+https://www.zhihu.com/question/1887430685029033677/answer/1903514418471498722
+
+hzy：github: hzyhhzy
+这是几十年以来的open问题 5子是简单必胜 8子是40年前已经证明必和 6 7子至今没有解决。 我训练过ai，6子有相当大的可能性是必和的，甚至改成横竖连五斜线连六这种介于5子棋和6子棋之间的规则，也是几乎必和的。 但是即使是7子棋，至今还没有人能证明是必和。…阅读全文​
+
+我感觉这种什么都要证明一下的思维方式就有问题，更应该思考的是证明了后能得到什么，证明所采取的手段有什么应用，在证明的过程中能不能得到什么创新的工具。
+
 为什么志村五郎与威廉·瑟斯顿说数学竞赛中有些问题人为编造的味道太浓,不是实际数学研究中会碰到的问题? - snort的回答  <br>
 https://www.zhihu.com/question/605167479/answer/3132239902
 
