--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+
+PhD第二学期随笔 - Matthew的文章 <br>
+https://zhuanlan.zhihu.com/p/632753591
+
+Matthew：
+随着坐上芝加哥前往香槟的火车，一段新的未知旅途又开始了……在国内短暂呆了12天，首阳中招，经历了完整的刀片嗓-失声-高烧，于是在飞了20小时入境之后，在芝加哥downtown的一家星巴克睡着了……言归正传 课业 第二学期还是选了两门课，不过因为情况特殊，所以选了两门500 level的研究生的课。于是乎在期中前每周的压力都…阅读全文​
+
+------
 五子棋如果改成六子棋或者n子棋可以无限下吗? - hzy的回答 <br>
 https://www.zhihu.com/question/1887430685029033677/answer/1903514418471498722
 
