--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,14 @@
 
 最新 6.3：
 
-如有得罪，纯属巧合，只想在赛博空间爽一下，毕竟我不是高学历人才，智商不是很高，没想那么多，对吧？
+七龙珠 弗利萨篇 - BGM合集（含未收录） <br>
+https://www.bilibili.com/video/BV1st4y1z7nD/?p=6
+
+20倍界王拳配乐<br>
+https://www.bilibili.com/video/BV1st4y1z7nD/?p=7
+
+------
+乌龙闯情关30集10分23秒这首滑稽配乐好像没人截过。
 
 ------
 不要躺平，不要放纵，不要自暴自弃，用心去享受每一天。
