--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,18 @@
+如果有人告诉你，你所有的思想观念都是被人刻意引导的结果，你根本就没有独立思考的能力，该如何反驳ta？ - 晏北的回答  <br>
+https://www.zhihu.com/question/649392386/answer/85693938478
+
+“一个人人都是阿尔法的社会，必然充满动荡和痛苦。试想，一座工厂充满了有着独立个性和优秀智力的阿尔法，那会是怎样的情形？
+所有人都不愿意做那些重复性的琐碎工作，都想获得高级岗位。高智商的人们冲突不断，最终结果就是一塌糊涂。”
+
+就我个人的感觉，不是我不愿意做重复性的琐碎工作，而是愿意做的人实在太多了，根本就不差我一个。而我现在正在做的研究，除我之外我没看到有谁在做。
+
+同学们现在25年了玩原神还赶的上吗? - 乱码君的回答   <br>
+https://www.zhihu.com/question/1910251109496361304/answer/1910423405854963657
+
+乱码君：
+咱还是很可爱的说。
+刚过完最新版本间章，评价是现在入坑赶不上了。 现在的游戏主线剧情已经完全默认玩家做过过往的活动，错过的剧情就这样一头雾水地当你已经知道然后塞给你。 如果说雪山的阿贝多剧情还给你做了简单的大记忆恢复术，那么希穆兰卡的小杜林等相关内容，对于没有做过活动的玩家，就是完全没有任何前置信息地直接突兀地出现。 所以，现在入坑，由于错过太…阅读全文​
+
 
 PhD第二学期随笔 - Matthew的文章 <br>
 https://zhuanlan.zhihu.com/p/632753591
