--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,14 @@
+偏导数符号 ∂ 的正规读法是什么？ - 学数相伴的回答  <br>
+https://www.zhihu.com/question/22355447/answer/76553019327
+
+学数相伴：这个符号的Latex是partial, 它是多元偏导，我见过很多老师读dao, 读partial也行，作为国人，我们读偏导也无可厚非。 这个没有必要太在意，关注力放在更数学的层面会更好一些。…阅读全文​
+
+数学专业女生怎么追? - huahu的回答 <br>
+https://www.zhihu.com/question/617679342/answer/3170753913
+
+huahu：
+憨憨大胆的去追就行了，数学女孩很容易被满足。
+
 如果有人告诉你，你所有的思想观念都是被人刻意引导的结果，你根本就没有独立思考的能力，该如何反驳ta？ - 晏北的回答  <br>
 https://www.zhihu.com/question/649392386/answer/85693938478
 
