--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,39 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 5.30：
+最新 6.3：
 
+ZARD - 负けないで
+
+作曲: 织田哲郎
+作词: 坂井泉水
+
+不经意的瞬间 我们的目光相遇 <br>
+那种幸福的心跳 你一定还记得吧 <br>
+我爱上了这个色调柔和的季节<br>
+像那日一样  闪耀着光芒  <br>
+就是你的样子<br>
+
+别认输  再加一点油<br>
+请一定坚持 跑到最后<br>
+
+不论离你有多远<br>
+我的心 始终在你的身边<br>
+追着你那遥远的梦想去吧<br>
+
+不论发生任何事  <br>
+你都装作一副若无其事的样子<br>
+总会有办法的啦 你种是故作轻松<br>
+“今晚和我一起跳支舞吧”<br>
+一直到现在 也依然喜欢这样的你 <br>
+不要忘了 
+
+不要认输 你看那里<br>
+目的地已经越来越近<br>
+无论相隔多么遥远<br>
+我的心 始终在你的身边<br>
+你感觉到了吧 我注视着你的目光<br>
+
+------
 孙耀威 - 爱的故事上集
 
 作词: 潘伟源
