--- a/text/歌词.md
+++ b/text/歌词.md
@@ -22,7 +22,7 @@ ZARD - 负けないで
 
 不论发生任何事  <br>
 你都装作一副若无其事的样子<br>
-总会有办法的啦 你种是故作轻松<br>
+总会有办法的啦 你总是故作轻松<br>
 “今晚和我一起跳支舞吧”<br>
 一直到现在 也依然喜欢这样的你 <br>
 不要忘了 
