--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,30 @@
+康德式思辨在其最高峰以事实证据告终：即洞察到感性世界和超感性世界必然有一个联系原则，因此必然有一个绝对地创造和决定这两个世界的生成原则作为基础。
+这种洞察本身完全正确，但对他来说，只能根据其理性中绝对但机械地起作用的规律，停留在绝对的统一性上，只承认这种统一性是绝对实体性的，并从中推导出所有可变的东西。
 
+这种统一性对他来说仅仅是事实性的，因此它的对象也未经探究，因为他只是机械地让统一性的基本规律作用于自身；但他没有将这种有效性和它的规律本身纳入他的知识，而这原本会让他获得纯粹的光明，并达到绝对知识。
+
+康德的事实证据首先不是最高的证据，因为他让该证据的对象从两个次要环节中产生，并没有像我们刚刚所掌握的最高事实性对象那样，将它理解为纯粹的知识，而是同时附带了它是感性世界和超感性世界纽带的次要规定；因此，它在内在和自身中甚至不是纯粹的统一性，而是二元性。
+
+他的最高原则是事后综合：事后综合的意思是：当一个人通过自我观察在意识中发现一个析取判断的两个环节，并且仿佛受理性驱使，认为它们本身必然是同一的，却不考虑说明它们在这种统一性中如何同时成为二者：简而言之，这与我们在第一课中从已发现的存在和思维的二元性上升到 A 作为其必然联系的必要纽带，以便首先构建与康德共同的先验主义完全相同，而这还不应该到此为止：
+
+它应该是一种先验的综合，同时也是分析，因为它同时建立了统一性和二元性的基础。
+
+我说过，康德的最高证据是事实性的，甚至不是最高的事实性证据；我们今天已经建立了最高的事实性证据：即洞察到知识的绝对独立存在，不受任何外部事物、任何可变性的任何规定；这与康德式的绝对性形成对比，后者是由感性和超感性之间的变化决定的。
+
+果现在这在科学自身中真正地成为生成性的，那么在科学中，作为一种生成，变化本身和绝对的变化将被确立，但决不会立即确立一种特定的变化。看起来，绝对的事实性只能由超越一切事实性的人来发现，就像我实际上是在发现绝对知识的真正内在原则之后才发现它一样，并且始终像我在这里所做的那样使用它，即引导听众从事实性进入生成。
+
+康德的证据是事实性的，我们现在仍然处于事实性之中，并且，我补充说，在世界上的所有科学中，除了绝对知识之外，没有任何其他证据可以找到，只有事实性的证据，我指的是在第一性原理中。[/] 关于哲学，在对康德进行了证明之后，我们可以免去对其他体系进行尝试的麻烦。继哲学之后，数学也宣称拥有证据；甚至在其一些代表人物中，也表现出对哲学的荒谬的优越感，而这只是在我们这个时代，由于折衷主义才可能被允许。现在，完全撇开这一点不谈，即使考虑到它能够而且应该是什么，它的状况也不是很好，它必须承认，尽管在进步过程中它确实变得生成性的，但它的原则完全只能是事实性证据。
+
+因为请算术家，仅仅作为算术家，告诉我，他如何能够产生一个坚实而稳定的“一”，或者几何学家，当他在空间中画出连续的线时，是什么支撑着他的空间，并使之稳定下来——除了直接的直观之外，这些东西以及他的生成所需的许多其他要素，难道是以其他方式赋予他的吗?
+47
+
+这丝毫不应该成为责备数学的理由，作为数学，它不应该也不可能是其他样子，我们的目的当然不是要混淆科学的界限，而只是要承认这一点，并且像所有其他科学一样，数学应该认识到它不是第一位的，不是独立的，它的自身可能性原则存在于另一门更高的科学中。
+
+如果说在现实的科学中不存在除了事实性证据之外的其他原则，而绝对知识却想要引入生成性证据，并从中推导出事实性证据，那么很明显，绝对知识在其内在、精神和生命方面与迄今为止所有科学的理性运用完全不同，不学习它本身的人都不了解它，而且它的地位绝对不能被任何其他东西所取代。
+
+同样清楚的是，它绝对不能从迄今为止在生活或科学中出现的任何观点或命题出发，被认为是真实的、被攻击或被反驳；因为无论它是什么，无论它看起来多么明显，它都肯定只是事实性地明显，而绝对知识不会无条件地承认这类东西，而只是在它自身在生成过程中首先确定的条件下才承认；但是，如果有人想以此作为原则来反驳绝对知识，那么他就是在要求无条件的同意，而这种同意在一开始就被永远地拒绝了，因此，他是在 "ex non concessis"（在未经承认的前提下）进行争论，这使他变得可笑。绝对知识只能根据自身来评判！它只能从自身出发，通过指出内部矛盾、内部不一致或不足之处来攻击和反驳，因此，在进行最后一项工作之前，必须先学习和理解它，无论如何都要从这里开始。诚然，到目前为止，人们一直试图颠倒顺序；先判断和反驳，然后再理解，如果上帝允许的话；但结果却是，打击根本没有落在绝对知识身上，因为它像一个看不见的幽灵，一直隐藏在他们的视线之外，而是落在了先生们亲手编造的幻想上，而正是这些幻想让他们再次陷入迷途，因此，现在的混乱已经发展到如此地步，以至于可以预料，人们很快就会意识到，自己是多么地困惑。
+
+-------
 陈景润《初等数论》 第3册 第十一章 平方剩余  p87
 
 为什么用4a乘以(3)式两边等式仍然成立？a=b模m表示a=km+b,显然？把a、b、m同时乘以一个数等式不变。假设a=b，为什么ka=kb？乘法到底是什么？我记得我刚学乘法时是一个数一个数加起来的。
@@ -13,6 +39,8 @@ x=1模m的解：   1 5 9 13 17
 这里之所以要乘以4a是为了变形为y^2=D的形式，那为什么乘以a不行呢？乘以4a后可以把分母里的4约掉。
 
 打算花点时间写一篇范例，介绍一下我是怎么看数学书的，核心原则是破坏大脑的肌肉记忆。
+
+暂时不想写了
 
 --------
 　　身经百战的胡铁花怎么会变成如此模样？<br>
