--- a/text/看书.md
+++ b/text/看书.md
@@ -13,7 +13,7 @@
 
 果现在这在科学自身中真正地成为生成性的，那么在科学中，作为一种生成，变化本身和绝对的变化将被确立，但决不会立即确立一种特定的变化。看起来，绝对的事实性只能由超越一切事实性的人来发现，就像我实际上是在发现绝对知识的真正内在原则之后才发现它一样，并且始终像我在这里所做的那样使用它，即引导听众从事实性进入生成。
 
-康德的证据是事实性的，我们现在仍然处于事实性之中，并且，我补充说，在世界上的所有科学中，除了绝对知识之外，没有任何其他证据可以找到，只有事实性的证据，我指的是在第一性原理中。[/] 关于哲学，在对康德进行了证明之后，我们可以免去对其他体系进行尝试的麻烦。继哲学之后，数学也宣称拥有证据；甚至在其一些代表人物中，也表现出对哲学的荒谬的优越感，而这只是在我们这个时代，由于折衷主义才可能被允许。现在，完全撇开这一点不谈，即使考虑到它能够而且应该是什么，它的状况也不是很好，它必须承认，尽管在进步过程中它确实变得生成性的，但它的原则完全只能是事实性证据。
+康德的证据是事实性的，我们现在仍然处于事实性之中，并且，我补充说，在世界上的所有科学中，除了绝对知识之外，没有任何其他证据可以找到，只有事实性的证据，我指的是在第一性原理中。[/] 关于哲学，在对康德进行了证明之后，我们可以免去对其他体系进行尝试的麻烦。继哲学之后，数学也宣称拥有证据；甚至在其一些代表人物中，也表现出对知识学的荒谬的优越感，而这只是在我们这个时代，由于折衷主义才可能被允许。现在，完全撇开这一点不谈，即使考虑到它能够而且应该是什么，它的状况也不是很好，它必须承认，尽管在进步过程中它确实变得生成性的，但它的原则完全只能是事实性证据。
 
 因为请算术家，仅仅作为算术家，告诉我，他如何能够产生一个坚实而稳定的“一”，或者几何学家，当他在空间中画出连续的线时，是什么支撑着他的空间，并使之稳定下来——除了直接的直观之外，这些东西以及他的生成所需的许多其他要素，难道是以其他方式赋予他的吗?
 47
