--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 6.8：
 
-果粒奶优，喝起来味道还行，就是太黏了。
+果粒奶优，喝起来味道还行，就是太黏了。加点水稀释下就好了，最好放一些冰块。
 
 ------
 没有agi生产力也早就过剩了，现在缺的是艺术和审美。可能大多数人都已经满足抖音这样的娱乐了吧，音乐意识流对他们是多余的。
