--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,12 @@
 2025年挑战：记录一些想法和分享。
 
-最新 6.8：
+最新 6.10：
 
+应试教育筛选出来的人，他们的信息判断能力真的很弱。他们学习能力很强，因此他们获取的信息都是从其他人那里学来的，这些信息都是别人整理好的清晰明确的信息。
+
+其实无论是我们生活的社会还是自然界，都存在大量模糊不清的信息，这就需要我们通过分析、反思、实践、创新、联想等手段将其转化为清晰有用的信息，我们不可能再从别人那里学到这些信息。
+
+------
 果粒奶优，喝起来味道还行，就是太黏了。加点水稀释下就好了，最好放一些冰块。
 
 ------
