--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 6.10：
 
-应试教育筛选出来的人，他们的信息判断能力真的很弱。他们学习能力很强，因此他们获取的信息都是从其他人那里学来的，这些信息都是别人整理好的清晰明确的信息。
+应试教育筛选出来的人，他们的信息判断能力真的很弱。他们学习能力很强，因此他们获取的信息都是从其他人那里学来的，这些信息都是别人整理好的清晰明确的信息（可能特别复杂，只有智商特别高的人才能学会）。
 
 其实无论是我们生活的社会还是自然界，都存在大量模糊不清的信息，这就需要我们通过分析、反思、实践、创新、联想等手段将其转化为清晰有用的信息，我们不可能再从别人那里学到这些信息。
 
