--- a/text/看书.md
+++ b/text/看书.md
@@ -1,3 +1,31 @@
+自我现在感到自己受到限制，即它对自身而言是受限的，而不像先前那样，或像无生命的弹性体那样，仅仅对外部的观察者而言是受限的。它的活动对它自身而言被取消了——我们说'对它自身'；因为我们从更高的视角看，的确能看到它通过绝对活动在自身之外产生了驱动力的对象，但作为我们研究对象的那个自我却看不到这一点。
+
+这种活动的完全消灭与自我的本质特征相矛盾。因此，只要它是一个自我，它就必须为自身恢复这种活动，也就是说，它必须至少使自己处于这样一种状态：它能够在未来的反思中将自己设定为自由和无限的。
+
+根据我们的推导，这种活动的恢复是通过绝对的自发性完成的，仅仅依据自我的本质，而不需任何特殊的驱动。对反思者的反思，即当前行为立即将证明自己是什么，一种中断一个行为以用另一个行为代替它的过程——当自我以刚才描述的方式感受时，它也在行动，只是没有意识；另一个行为应该取代这个行为，一个至少使意识成为可能的行为——这发生于绝对的自发性中。自我在其中绝对地行动，因为它行动。
+
+（这里是单纯生命与智能之间的界限，如同之前死亡与生命之间的界限。自我的意识仅仅源于这种绝对的自发性。——我们不是通过任何自然法则或自然法则的任何结果，而是通过绝对自由上升到理性，不是通过过渡，而是通过跳跃。——因此，在哲学中，必须从自我出发，因为它无法被推导；因此，唯物主义者试图从自然法则解释理性表现的企图永远无法实现。）
+
+显然，所要求的行动，纯粹且仅仅通过绝对自发性发生的行动，只能是一种通过理想活动的行动。但每个行动，只要它确实是行动，就有一个对象。当前这个行动，它纯粹且仅仅植根于自我之中，所有条件都应当依赖于自我，只能以自我中存在的某物为对象。但在自我中除了感受外别无他物。因此，这个行动必然指向感受。
+
+这个行动以绝对自发性发生，因而对可能的观察者而言，是自我的行动。它指向感受，也就是首先指向在先前构成感受的那个反思中的反思者。——活动指向活动；因此，在那个反思中的反思者，或称感受者，被设定为自我；当前功能中的反思者的自我性，作为这样的反思者根本不进入意识，被转移到感受者身上。
+
+根据刚才提出的论证，自我是自我决定的东西。因此，感受者只有在其仅通过驱动力，即通过自我，因而通过自身被决定为感受的情况下，才能被设定为自我，也就是说，仅在它感受自身及其自身力量的情况下。——只有感受者是自我，只有驱动力，在其引起感受或反思的程度上，属于自我。超出这一界限的东西——如果有什么东西超出这一界限，而我们确实知道有东西，即向外的驱动力，超出了这一界限——被排除在外；这点值得注意，因为被排除的东西在适当的时候必须再次被接纳。
+
+因此，在当前的反思中被感受的东西，对于这个反思来说——同样是自我，因为感受者只有在其通过自身被决定的程度上才是自我，即它感受自身。
+
+在当前的反思中，自我被设定为自我，只有在它同时是感受者和被感受者的情况下，因此与自身处于相互作用关系中。它应该被设定为自我；因此它必须以所描述的方式被设定。
+
+感受者被设定为在感受中是主动的，因为它是反思者，并且在同一感受中被感受的是被动的；它是反思的对象。——同时，感受者被设定为在感受中是被动的，因为它感受自己被驱动；并且在这个意义上，被感受的或驱动力是主动的；它是驱动者。
+这是一个必须统一的矛盾，只能以下列方式统一。——感受者对于被感受者是主动的；并且在这方面它只是主动的。（它被驱动去反思这一点在反思中并未进入意识；在我们的哲学研究中会考虑反思驱动力，但在原始意识中却不会考虑。它落入感受者的对象之中，在对感受的反思中不被区分。）但现在它也应该是被动的，关系到一种驱动力。这是向外的驱动力，它实际上被驱动去通过理想活动产生一个非我。（现在它在这个功能中确实是主动的，但就像之前它的被动性一样，这里它的主动性没有被反思。对它自身而言，在对自身的反思中，它是被强制行动的，尽管这似乎是一个矛盾，但这个矛盾将在适当的时候解决。因此感受到的强制是将某物设定为实际存在的。）
+
+被感受者通过对反思者的反思驱动力而主动。它在同样关系上对反思者也是被动的，因为它是反思的对象。但这一点没有被反思，因为自我被设定为一个完全相同的东西，即感受自身，而对反思本身不再进行反思。因此，自我在另一个关系中被设定为被动的；即在它受限的情况下，而在这种情况下，限制它的是一个非我。（反思的每个对象必然是有限的；它有一定的数量。但在反思过程中，这种限制永远不会从反思本身推导出来，因为在这种程度上对反思本身不进行反思。）
+
+两者应该是一个完全相同的自我，并被设定为这样。然而，一个被视为对非我是主动的；另一个在同样关系中被视为被动的。在前者中，自我通过理想活动产生一个非我；在后者中，它被同一个非我所限制。
+这个矛盾很容易统一。产生的自我本身被设定为被动的，反思中的被感受者也是如此。因此，对自身而言，自我在与非我的关系中始终是被动的，完全不意识到自己的活动，也不对它进行反思。——因此，事物的现实性似乎被感受到，尽管实际上只有自我被感受到。
+（这里是一切现实性的基础。仅仅通过我们现在已经证明的感觉与自我的关系，现实性对自我才成为可能，无论是自我的现实性，还是非我的现实性。——某种仅通过感觉的关系才成为可能的东西，而自我既不意识到也不能意识到它对此的直观，因此似乎是被感受到的，这被称为信念。——对于一般现实性，无论是自我的还是非我的，只存在一种信念。）
+
+-------
 康德式思辨在其最高峰以事实证据告终：即洞察到感性世界和超感性世界必然有一个联系原则，因此必然有一个绝对地创造和决定这两个世界的生成原则作为基础。
 这种洞察本身完全正确，但对他来说，只能根据其理性中绝对但机械地起作用的规律，停留在绝对的统一性上，只承认这种统一性是绝对实体性的，并从中推导出所有可变的东西。
 
