--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,45 @@
 2025年挑战：记录一些想法和分享。
 
-最新 6.10：
+最新 6.23：
 
+しあわせの一番星（字幕）<br>
+https://v.youku.com/v_show/id_XMTM4OTY1NTIwMA==.html
+
+[天津课件] しあわせの一番星 浅田美代子 日语日文歌曲<br>
+https://v.youku.com/v_show/id_XNTk0NTgxMjEy.html
+
+浅田美代子 - しあわせの一番星
+
+作词:安井かずみ
+作曲:筒美京平
+
+在夕阳的余晖中<br>
+踏上归家的路<br>
+轻轻踢着小石头<br>
+明天也会是个晴天<br>
+在夕阳下仰望<br>
+站在红色屋顶上<br>
+第一颗最亮的星星<br>
+你看 我刚刚发现<br>
+噜噜噜噜噜 那个人的笑容<br>
+在我心上点亮光芒<br>
+明天也一定是精神百倍<br>
+我拍着胸脯想着<br>
+
+忘情地追逐夕阳<br>
+连母亲的话也忘了<br>
+那个人的影子<br>
+映照在路旁的草坪上<br>
+噜噜噜噜噜 心中闪耀着 <br>
+那个人的话语<br>
+总有一天 每个人都能迎来幸福<br>
+
+在夕阳的小道上<br>
+是我回家的路<br>
+不知被谁遗落的 一辆自行车<br>
+不知被谁遗落的 一辆自行车<br>
+
+------
 应试教育筛选出来的人，他们的信息判断能力真的很弱。他们学习能力很强，因此他们获取的信息都是从其他人那里学来的，这些信息都是别人整理好的清晰明确的信息（可能特别复杂，只有智商特别高的人才能学会）。
 
 其实无论是我们生活的社会还是自然界，都存在大量模糊不清的信息，这就需要我们通过分析、反思、实践、创新、联想等手段将其转化为清晰有用的信息，我们不可能再从别人那里学到这些信息。
