--- a/text/看书.md
+++ b/text/看书.md
@@ -68,12 +68,12 @@ x=1模m的解：   1 5 9 13 17
 
 变形后，如果x0是ax^2+bx+c有一次项的解，y=2ax0+b就是y^2没有一次项的解，没有了一次项后有什么好处？继续变形y-b=2ax，在求得y后，还需要2a|y-b，x才有解，当x取遍整数时，y没有取遍整数而是取x的一次映射，当y在特殊形式y^2下有解，x不一定在一般形式下有解，当在一般形式下求得解时，必定可以映射出一个特殊形式的y解。
 
-把m分解成素数幂相乘的形式，那么模m的方程与一系列模p^a的方程等价，两个点没想明白，这里等价的定义是什么？为什么说是等价的？为了下ai，再结合自己的理解，
+把m分解成素数幂相乘的形式，那么模m的方程与一系列模p^a的方程等价，两个点没想明白，这里等价的定义是什么？为什么说是等价的？问了下ai，再结合自己的理解，
 就是如果模m成立，那么模p^a的一系列方程全部成立，如果有一个不成立，那么就不等价了，反过来也一样。p^a|m，而m|y^2-a，所以p^a|y^2-a，这里对整除传导性的深入分析不是这里要写的内容，可以简单举个例子感受一下，3|6,6|24,那么3必定整除24。反过来呢？所有素数整除同一个数，那么素数的乘积也必定整除这个数，比如5|20,2|20，那么5×2=10|20，因为两个素数之间没有公因子，如果是合数，可能有公因子被重复相乘了，举个例子384=3×128,只有3这一个因子，6|384，12|384，6和12都只有3一个因子，但是一乘起来就变成6×12=72含有2个因子3，即3^2，整除不了3×128
 
 打算花点时间写一篇范例，介绍一下我是怎么看数学书的，核心原则是破坏大脑的肌肉记忆。
 
-数学只有初中水平，写点东西自娱自乐，数学圈的人就不要关注我了。
+数学只有初中水平，写点东西自娱自乐，数学圈的人就不要关注我写的数学相关内容了。
 
 --------
 　　身经百战的胡铁花怎么会变成如此模样？<br>
