--- a/text/挑战.md
+++ b/text/挑战.md
@@ -39,6 +39,13 @@ https://v.youku.com/v_show/id_XNTk0NTgxMjEy.html
 不知被谁遗落的 一辆自行车<br>
 不知被谁遗落的 一辆自行车<br>
 
+![浅田美代子](../pic/sub/yifan1.JPG) <br>
+![浅田美代子](../pic/sub/yifan2.JPG) <br>
+![浅田美代子](../pic/sub/yifan3.JPG) <br>
+![浅田美代子](../pic/sub/yifan4.JPG) <br>
+![浅田美代子](../pic/sub/yifan5.JPG) <br>
+![浅田美代子](../pic/sub/yifan6.JPG) <br>
+
 ------
 应试教育筛选出来的人，他们的信息判断能力真的很弱。他们学习能力很强，因此他们获取的信息都是从其他人那里学来的，这些信息都是别人整理好的清晰明确的信息（可能特别复杂，只有智商特别高的人才能学会）。
 
