--- a/text/看书.md
+++ b/text/看书.md
@@ -1,3 +1,21 @@
+
+正如我们现在已经对感觉进行了确定和解释，同样地，驱力也必须被确定，因为它与感觉是相关联的。通过这种解释，我们能够进一步前进，并在实践能力的范围内获得新的领域。
+
+驱力被设定，这意味着：自我对其进行反思。现在，自我只能对自身以及对那些对它而言和在它内部的东西进行反思，这些东西可以说是对它可及的。因此，驱力必须已经在自我中产生了某种作用，并且，就其通过刚才指出的反思已经被设定为自我而言，它必须已经在自我中表现出来。
+
+感知的自我被设定为自我。这个自我通过被感知的原始驱力被确定，要从自身出发，至少通过理想的活动来产生某种东西。然而，原始驱力根本不是单纯针对理想的活动，而是针对现实；因此，自我通过它被确定为在自身之外产生现实。——然而，这个确定它无法满足，因为追求永远不会有因果性，而是应该由非自我的逆向追求来保持平衡。因此，就其被驱力所确定的程度而言，它受到非自我的限制。
+
+在自我中，一旦所有反思的条件——一种限制——出现，就会有持续不断的趋势去反思自身。这个条件在这里出现了；因此，自我必然对其自身的这种状态进行反思。——在这种反思中，反思的自我如往常一样忘记了自身，因此它并未达到意识。此外，它发生在一个纯粹的驱动下；因此，在其中没有丝毫自由的表现，它就像上面所说的，成为一种纯粹的感觉。现在的问题只是：这是一种什么样的感觉？
+
+这种反思的对象是自我，即被驱动的、因此在理想上自主活动的自我：被自身内在的驱动所驱动，因此没有任何抉择和自发性。——但是这种自我的活动是针对一个它无法实现的对象，既不能作为事物，也不能通过理想的活动来表现出来。因此，这是一种没有任何对象的活动，但却被不可抗拒地驱动去追求一个对象，而且这种活动只能被感觉到。然而，自我中这样的一种确定被称为一种渴望；一种对完全未知事物的驱力，这种事物只通过一种需求、一种不适、一种寻求填补的空虚来显现，却并不指示从何而来？——自我在自身中感受到一种渴望；它感觉到自身是有需求的。
+
+这两种感觉，即现在推导出来的渴望感，以及上面指出的限制和强迫感，必须被区分开来，并且要将它们相互联系起来。——因为驱力需要被确定；现在驱力通过某种感觉显现出来，因此这种感觉需要被确定；但这只能通过另一种类型的感觉来确定。
+
+如果在第一种感觉中自我不受限制，那么在第二种感觉中就不会出现纯粹的渴望，而会出现因果性；因为自我那时可以产生某种外部事物，而它的驱力不会被限制在仅仅内在地确定自我。反之，如果自我不感觉到自身在渴望，那么它就不能感觉到自身受到限制，因为只有通过渴望的感觉，自我才从自身出发——只有通过这种感觉，自我和对自我才首次设定了某种应当存在于它之外的东西。
+
+这种渴望不仅对实践哲学，而且对整个科学学说都很重要。只有通过这种渴望，自我才被驱动到自身之外；只有通过这种渴望，外部世界才在自我中显现出来。
+
+--------
 自我现在感到自己受到限制，即它对自身而言是受限的，而不像先前那样，或像无生命的弹性体那样，仅仅对外部的观察者而言是受限的。它的活动对它自身而言被取消了——我们说'对它自身'；因为我们从更高的视角看，的确能看到它通过绝对活动在自身之外产生了驱动力的对象，但作为我们研究对象的那个自我却看不到这一点。
 
 这种活动的完全消灭与自我的本质特征相矛盾。因此，只要它是一个自我，它就必须为自身恢复这种活动，也就是说，它必须至少使自己处于这样一种状态：它能够在未来的反思中将自己设定为自由和无限的。
