--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,17 @@
+1992年邓小平广东视察工作<br>
+https://www.bilibili.com/video/BV1ym421V7iH/
+
+4分43秒：我是看新鲜，越新越好，越高越好，越高越新我越高兴
+
+5分46秒：人有两只手，这是毛主席的话，毛主席经常强调，两手都硬，两只手，不是一只手，是两只手，一只手抓改革开放，一只手严厉对待那些坏东西。
+
+-------
+人类语言究竟是何时出现的？<br>
+https://www.sohu.com/a/905809757_121119349
+
+语言是所有人类群体共有的特征，甚至可以说，它比其他任何能力更能定义我们作为“人”的本质。然而，关于语言究竟何时在我们的进化历程中出现，学界至今尚未达成共识。
+
+-------
 偏导数符号 ∂ 的正规读法是什么？ - 学数相伴的回答  <br>
 https://www.zhihu.com/question/22355447/answer/76553019327
 
