--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,172 @@
+豫卦
 
+▅▅  &nbsp;▅▅ (上六)<br>
+▅▅  &nbsp;▅▅ (六五)<br>
+▅▅▅▅▅ (九四)<br>
+▅▅  &nbsp;▅▅ (六三)<br>
+▅▅  &nbsp;▅▅ (六二)<br>
+▅▅  &nbsp;▅▅ (初六)<br>
+
+卦象：雷地豫（震上坤下）
+
+说明：豫卦由上卦震（雷，动）和下卦坤（地，顺）组成，象征雷动于地上，万物欣欣向荣，“豫”即快乐、喜悦、安逸之意。本卦寓意顺从中带有进发、在安逸中蕴含行动的时机。
+
+卦辞 《豫》：“利建侯行师。”
+
+利建侯行师：有利于立国封侯、出兵征伐，象征处于和平或乐观的状态中，要抓住时机主动作为。<br>
+含义：此卦象征乐而不怠，适于大展宏图之时，关键在于在安逸中不忘进取。
+
+爻辞
+
+初六：鸣豫，凶。
+
+鸣豫：因过于喜悦而张扬。<br>
+凶：招致祸患。<br>
+含义：喜乐之心若不能收敛，变为轻浮与放纵，结果必凶。
+
+六二：介于石，不终日，贞吉
+
+介于石：如同被困于石之间，比喻戒备小心。<br>
+不终日：很快警觉撤退。<br>
+贞吉：保持正道则吉。<br>
+含义：即使处于困境，若内心谨慎、及时调整，仍可转凶为吉。
+
+六三：盱豫，悔，迟有悔。
+
+盱豫：“盱”即张目观望，犹豫不决。<br>
+悔：因徘徊不进而悔恨。<br>
+迟有悔：迟疑不前最终招悔。<br>
+含义：优柔寡断，贻误良机，乐极反失。
+
+九四：由豫，大有得，勿疑。朋盍簪。
+
+由豫：顺势而行，依乐而动。<br>
+大有得：收获丰富。<br>
+勿疑：毋须犹豫。<br>
+朋盍簪：如好友同心、聚首如簪，比喻团结而和谐。<br>
+含义：豫而不懈，顺势团结，果断前行，收获甚丰。
+
+六五：贞疾，恒不死。
+
+贞疾：正道中出现病象，比喻内忧隐患。<br>
+恒不死：坚持正道则终能化解危机。<br>
+含义：虽有忧患，但保持坚定、恒心不怠，终能度过难关。
+
+上六：冥豫，成有渝。无咎。
+
+冥豫：沉溺于安逸之中。<br>
+成有渝：原定的志向出现动摇。<br>
+无咎：虽偏离正轨，但尚未造成危害。<br>
+含义：过于沉迷享乐虽使方向动摇，但若及时觉醒，仍可避免灾祸。
+
+总结：
+豫卦的中心思想是：
+乐而不淫，豫而不怠；
+把握良机，在安逸中行动；
+慎防快乐滋生懈怠，明辨方向坚定执行。
+
+谦卦
+
+▅▅  &nbsp;▅▅ (上六)<br>
+▅▅  &nbsp;▅▅ (六五)<br>
+▅▅  &nbsp;▅▅ (六四)<br>
+▅▅▅▅▅ (九三)<br>
+▅▅  &nbsp;▅▅ (六二)<br>
+▅▅  &nbsp;▅▅ (初六)<br>
+
+卦象：地山谦（坤上艮下）
+
+说明：谦卦由上卦坤（地，柔顺）和下卦艮（山，止）组成，象征大地之上的山丘，谦逊之德内藏于稳重之中。象征藏锋不露、谦虚自持。
+
+卦辞 《谦》：“亨。君子有终。”
+
+亨：通达顺利，谦虚者无所不成。<br>
+君子有终：君子持守谦德，必得善终。<br>
+整句含义：谦卦强调以谦为本，行事光明正大，终将亨通吉祥，获得善果。
+
+爻辞
+
+初六：谦谦君子，用涉大川，吉。
+
+谦谦君子：再三自谦的君子，品行高洁。<br>
+用涉大川：有能力跨越重大困难。<br>
+吉：吉祥顺利。<br>
+含义：谦德之人勇于担当，面对重大挑战也可安然无虞。
+
+六二：鸣谦，贞吉。
+
+鸣谦：发声宣扬谦德，或谦而有声。<br>
+贞吉：坚守正道为吉。<br>
+含义：谦逊虽表现于外，但若内心持正，终能得吉。
+
+九三：劳谦君子，有终，吉。
+
+劳谦：辛勤而又谦虚。<br>
+有终，吉：坚持到底，可得美好结果。<br>
+含义：不辞辛劳、持谦不懈者，终将获吉报。
+
+六四：无不利，捴谦。
+
+无不利：诸事皆吉。<br>
+捴谦：始终谦虚。<br>
+含义：一切顺利，若更进一步保持谦逊，则无往不利。
+
+六五：不富以其邻，利用侵伐，无不利。
+
+不富以其邻：不独自富有，与邻共享。<br>
+利用侵伐：有利于出征伐敌。<br>
+无不利：顺利无碍。<br>
+含义：谦让而不自满，能团结他人，适宜用兵征伐，终将事事顺利。
+
+上六：鸣谦，利用行师征邑国。
+
+鸣谦：显扬谦德。<br>
+利用行师征邑国：有利于率兵出征、平定诸侯。<br>
+含义：在谦德昭著之时，即使发动军事行动也有利。
+
+总结
+
+谦卦教导我们：谦而不卑，内敛自守者可成大业；
+不争而胜，持谦者终得上天护佑；
+德厚者载物，在世间无不通达吉利。
+
+它启示我们：真正的强大，不在于高调锋芒，而在于藏器于身，待时而动。谦者无敌。
+
+--------
+私有财产的主观本质——作为自我目的存在的活动、作为主体、作为个体——就是劳动。因此，很显然，只有将劳动作为自身原则来理解的国民经济学——如亚当•斯密所做的那样，即不再把私有财产视为存在于人之外的客观存在——才能作为私有财产的真实现实和运动出现。这样的国民经济学，是私有财产在意识中自我独立形成的运动（即现代工业本身），其产物即是现代工业。反过来，正是这种国民经济学通过使现代工业成为有意识的力量，推动了工业的发展与能量。对于揭示了财富在私有财产框架内的主观本质的启蒙国民经济学而言，那些仅将私有财产视为人之外的客观本质的货币主义和重商主义体系，是拜物教者和教皇主义者。因此，恩格斯有理由称亚当•斯密为“国民经济学的路德”。
+
+正如路德把宗教、信仰理想化为外部世界的本质，从而反对教皇制度，正如他将宗教观念转化为人的内在本质，从而抛弃了外在的宗教仪式——这里的情况也是如此：通过把私有财产理解为存在于人自身的国民经济学（人变为私有财产的本质），排斥了存在于人之外并独立于人存在的财富——即外在的、无意识的客观性。个人成为私有财产的决定因素，就如同路德宗教中个人成为宗教的决定因素一样。
+
+然而，建立在劳动基础上的国民经济学，在表面上承认人类的同时，实际上却完成了对人的彻底否定——因为人不再与私有财产的外在本质处于对立状态，而是成为了这种对立本质本身。曾经存在于人之外的东西（其实际外在表现），现在变成了外在行为，变成了物化行为。
+
+因此，当这种国民经济学表面上以承认人、承认人的独立性和主动自我决定性为起点，并通过把私有财产转化为其内在本质而摆脱了将私有财产视为存在于人之外的地方性、民族性等限定，从而以世界精神、普遍性以及破坏一切界限和束缚的力量形象出现时——它必须在进一步发展中剥去这种虚伪，暴露其犬儒的本质。事实也正是如此：尽管其学说存在矛盾，它依然单方面、且更为清晰和激烈地发展出“劳动是财富唯一本质”的学说。但其结论却反过来反对最初的立场，成为人的敌人；最终对最后一种独立于劳动过程的、个体的、自然的财富形式——地租——给予致命一击，打击了已经被经济化的封建统治的表现形式。
+
+从斯密到赛伊、密尔等，国民经济学的犬儒主义不仅在相对上（因为工业的后期发展使矛盾更为复杂）增长，而且在绝对上也日益显明：他们自觉地比前辈们更进一步加深了对人的异化——因为他们一方面赋予私有财产以主动存在，将人提升为本质，另一方面又将非人（人的“非存在”）也提升为本质。因此，现实的矛盾完全符合他们所确立的矛盾本质：分裂的现实。
+
+工业现实不仅没有推翻，反而证实了他们自身支离破碎的原则。他们的原则，正是这个支离破碎的国家（或体制）的原则。
+
+魁奈博士的重农学说是从重商主义体系向亚当·斯密过渡的阶段。重农学派直接导致了国民经济中封建财产的瓦解，但正因如此，他们也直接推动了封建财产在国民经济中的转化和重建。然而，他们的语言已经不再是封建的，而是经济的。
+
+所有财富都被归结为土地及其耕作（农业）。土地尚不是资本；它是一种特定形式的资本存在，其意义只能源于其自然特性。然而，土地终究是一个普遍的自然元素，而重商主义体系只承认贵金属中存在财富。因此，财富的客体、财富的物质，直接在自然范围内获得了最高的普遍性，因为它们作为自然，直接保持着客观财富的地位。
+
+土地之所以能为人类所用，唯有通过劳动和耕作。因此，财富的主观本质被转移到了劳动之上。但农业是唯一的生产性劳动。因此，劳动尚未被理解为普遍性和抽象性；它仍然与其作为物质的特定自然元素结合在一起，因此仍然只以一种特定的、自然限定的存在形式为人所知。因此，劳动无非是人类特定和特殊的异化，就像劳动产品被视为一种特殊类型的财富——一种源于自然而非劳动本身的财富。在这里，土地仍然被视为独立于人类的自然存在，尚未被视为资本，即劳动本身的要素。相反，劳动表现为土地的要素。
+
+从有限的劳动观到普遍的劳动原则
+但是，由于过去那种仅仅作为客体存在的外部财富的拜物教被还原为极其简单的自然元素，并且由于财富的本质在于其主观存在——尽管只是部分地、以特殊的方式——被承认了，那么，必要的进步就是承认财富的普遍本质，从而将完全绝对和抽象的劳动提升为原则。
+
+事实证明，从经济角度（唯一理性的角度）来看，农业与任何其他生产部门并无二致，因此财富的本质不在于特定类型的劳动，不在于与特定元素结合的特定劳动表现，而在于一般劳动。
+
+由于重农学派宣称劳动是财富的本质，他们也否定了特殊、外部和纯粹客观的财富。但对重农学派而言，劳动首先仅仅是土地财产的主观本质（重农学派以历史上占主导地位并被承认的财产为出发点）；他们认为只有土地财产才是人类异化的财产。通过宣布生产（农业）是土地财产的本质，他们消除了土地财产的封建性质；但是，通过宣布农业是唯一的生产，他们对工业世界采取了否定态度，并承认了封建制度。
+
+显然，一旦理解了工业作为与土地财产对立的主要本质，也就是说，一旦工业自身被确立为工业，那么这种本质也就包含了其自身的对立面。因为正如工业包含了被取代的土地财产，工业的本质也包含了土地财产的本质。
+
+土地是私有财产的第一种形式，而工业在历史上最初是作为一种特殊类型的财产，或者说更像是土地的被解放的奴隶，与土地相对立。同样，这个过程在私有财产和劳动的主观性质的科学理解中再次出现。最初，劳动被视为农业劳动，后来才被承认为一般劳动。
+
+所有财富都变成了工业财富，劳动的财富，而工业则是完成了的劳动，就像工厂制度是工业、劳动的发达本质一样，而工业资本则是私有财产的完整的客观形式。
+
+我们看到，只有到那时，私有财产才能以其最普遍的形式，完全支配人类并成为一种世界历史性的力量。
+
+-------
 正如我们现在已经对感觉进行了确定和解释，同样地，驱力也必须被确定，因为它与感觉是相关联的。通过这种解释，我们能够进一步前进，并在实践能力的范围内获得新的领域。
 
 驱力被设定，这意味着：自我对其进行反思。现在，自我只能对自身以及对那些对它而言和在它内部的东西进行反思，这些东西可以说是对它可及的。因此，驱力必须已经在自我中产生了某种作用，并且，就其通过刚才指出的反思已经被设定为自我而言，它必须已经在自我中表现出来。
@@ -14,6 +182,12 @@
 如果在第一种感觉中自我不受限制，那么在第二种感觉中就不会出现纯粹的渴望，而会出现因果性；因为自我那时可以产生某种外部事物，而它的驱力不会被限制在仅仅内在地确定自我。反之，如果自我不感觉到自身在渴望，那么它就不能感觉到自身受到限制，因为只有通过渴望的感觉，自我才从自身出发——只有通过这种感觉，自我和对自我才首次设定了某种应当存在于它之外的东西。
 
 这种渴望不仅对实践哲学，而且对整个科学学说都很重要。只有通过这种渴望，自我才被驱动到自身之外；只有通过这种渴望，外部世界才在自我中显现出来。
+
+因此，这两者是综合统一在一起的，缺一不可。没有限制，就没有渴望；没有渴望，也就没有限制。——但这两者同时又完全是对立的。在限制的感觉中，“我”仅仅被感受为受苦的；而在渴望的感觉中，“我”也被感受为能动的。
+
+两者都建立在冲动之上，而且是同一个冲动，同一个“我”中的冲动。这个冲动源于“我”受到“非我”的限制，并且唯有通过这种限制才成为可能的冲动，它决定了反思能力，由此产生了某种被迫的感觉。同样的冲动也促使“我”通过理想性的活动将自身之中的内容表达出来，并且创造出某种外在于自身的东西；而由于“我”在这一目的上是受限的，因此就产生了一种渴望，而由于反思能力被置于这种必要性之下进行反思，于是就产生了渴望的感觉。——问题在于：同一个冲动如何能够产生出对立的东西呢？仅仅是因为它所指向的力量有所不同。在第一种功能中，它仅仅指向单纯的反思能力，这种能力只接受被给予它的东西；而在第二种功能中，它指向的是绝对的、自由的、根植于“我”自身的那种趋向，这种趋向以创造为目的，并通过理想性的活动确实地创造出来；只是我们到目前为止还不知道它的产物是什么，也尚无能力去认识它。
+
+因此，渴望是“我”中那种原始的、完全独立的表现出来的趋向。之所以说它是独立的，是因为它丝毫不考虑任何限制，也不会因此受到阻碍。（这一点很重要；因为将来我们会看到，这种渴望是所有实践法则的载体；而且只有通过它们是否能从这种渴望中推导出来，才能对它们加以辨识。）
 
 --------
 自我现在感到自己受到限制，即它对自身而言是受限的，而不像先前那样，或像无生命的弹性体那样，仅仅对外部的观察者而言是受限的。它的活动对它自身而言被取消了——我们说'对它自身'；因为我们从更高的视角看，的确能看到它通过绝对活动在自身之外产生了驱动力的对象，但作为我们研究对象的那个自我却看不到这一点。
@@ -89,9 +263,9 @@ x=1模m的解：   1 5 9 13 17
 把m分解成素数幂相乘的形式，那么模m的方程与一系列模p^a的方程等价，两个点没想明白，这里等价的定义是什么？为什么说是等价的？问了下ai，再结合自己的理解，
 就是如果模m成立，那么模p^a的一系列方程全部成立，如果有一个不成立，那么就不等价了，反过来也一样。p^a|m，而m|y^2-a，所以p^a|y^2-a，这里对整除传导性的深入分析不是这里要写的内容，可以简单举个例子感受一下，3|6,6|24,那么3必定整除24。反过来呢？所有素数整除同一个数，那么素数的乘积也必定整除这个数，比如5|20,2|20，那么5×2=10|20，因为两个素数之间没有公因子，如果是合数，可能有公因子被重复相乘了，举个例子384=3×128,只有3这一个因子，6|384，12|384，6和12都只有3一个因子，但是一乘起来就变成6×12=72含有2个因子3，即3^2，整除不了3×128
 
-打算花点时间写一篇范例，介绍一下我是怎么看数学书的，核心原则是破坏大脑的肌肉记忆。
+接下来主要研究x^2=a模p^a（p^α）的形式，通过a=p^bu将这个方程分类。如果b>=a,那么p^a|a=x^2，这里的意思是x^2中p的因子个数大于a，然后再乘以一个与p无关的因子，接下来我们看看作者对这种情况有什么深入的讨论。先把a=p^bu进行分类，然后再对p^a中的a分类，分为奇数和偶数，a是偶数时a=2k，得到x的解是至少有k个p因子，否则p^2的因子个数少于2k，p^a不可能整除x^2，然后如果x>=p^2k+1，说明p^a整除x，这样的解等价于x取0。如果是奇数a=2k+1，至少有k+1个p因子，否则不能整除p^2k+1。但是为什么要划分成奇偶性？主要是由x^2中的2决定的，如果是x^3，那么可能就要写成3k+b的形式了，因为如果a=k，那么x的解不好表示，p因子的个数要引入一个0.5k。
 
-数学只有初中水平，写点东西自娱自乐，数学圈的人就不要关注我写的数学相关内容了。
+如果b<a，就是p^b<p^a，那么这次要对b进行奇偶分类，上次是对a进行奇偶分类。为什么b>=a是对a分类，而b<a时就变成了对b分类？先看到这里吧，以后有空再看，看数学书太累了。
 
 --------
 　　身经百战的胡铁花怎么会变成如此模样？<br>
