--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,61 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 6.3：
+最新 6.29：
 
+王英姿 - 月亮船
+
+作词: 王浩
+作曲: 肖白
+
+我能够 捉到月亮<br>
+我将用 无数的梦<br>
+撑起 无数的桨<br>
+用勇敢和智慧 做我的船桨<br>
+摇着月亮船 驶向远方～<br>
+如果 我能够捉到月亮<br>
+我会用蜡笔 画出银河的气势<br>
+我会用算术 数清所有的星星<br>
+把最亮的一颗 戴在胸上<br>
+
+再见了 妈妈<br>
+今晚我就要远航<br>
+别为我担心<br>
+我有快乐和智慧的桨<br>
+当你醒来 千万别告诉别人<br>
+我正摇着月亮船 在银河上远航～<br>
+
+------
+范玮琪 - 一个像夏天一个像秋天
+
+作曲: 陈小霞
+作词: 姚若龙
+
+第一次见面看你不太顺眼<br>
+谁知道后来关系那么密切<br>
+我们一个像夏天一个像秋天<br>
+却总能把冬天变成了春天<br>
+
+你拖我离开一场爱的风雪<br>
+我背你逃出一次梦的断裂<br>
+遇见一个人然后生命全改变<br>
+原来不是恋爱才有的情节<br>
+
+如果不是你 我不会相信<br>
+朋友比情人还死心塌地<br>
+就算我忙恋爱 把你冷冻结冰<br>
+你也不会恨我 只是骂我几句<br>
+
+如果不是你 我不会确定<br>
+朋友比情人更懂得倾听<br>
+我的弦外之音 我的有口无心<br>
+我离不开Darling 更离不开你<br>
+
+你了解我所有得意的东西<br>
+才常泼我冷水怕我忘形<br>
+你知道我所有丢脸的事情<br>
+却为我的美好形象保密
+
+------
 ZARD - 负けないで
 
 作曲: 织田哲郎
