--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,33 @@
-2025年挑战：记录一些想法和分享。
+2025年想法：
 
-最新 6.23：
+最新 6.29：
 
+Larry Wolff - Face Of The Enemy
+
+【张卫健】江湖小子结尾片段 <br>
+https://www.bilibili.com/video/BV1Rs411B7VP
+
+![领悟](../pic/sub/ziran.JPG) <br>
+ 
+------
+高胜美 - 杵歌
+https://www.bilibili.com/video/BV12m4y1A7DU/
+
+作曲: 山地民谣
+
+（月亮啊 月亮啊）
+
+月亮啊已经出来哟<br>
+美丽的月亮爬上那东边的山坡<br>
+我们趁此良宵跳舞唱歌<br>
+那奴哇玩多依呀那呀嗬依呀嘿<br>
+那奴哇玩多依呀那呀嗬嗨呀<br>
+嗬依那奴哇玩多依呀那呀嗬<br>
+朋友啊快来快来哟<br>
+皎洁的月亮已经照上了椰树<br>
+来啊大好夜色跳舞唱歌<br>
+
+--------
 しあわせの一番星（字幕）<br>
 https://v.youku.com/v_show/id_XMTM4OTY1NTIwMA==.html
 
