--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+Dota2的BP策略性强吗？ - 鬼狂歌的回答 <br>
+https://www.zhihu.com/question/35194110/answer/62261733
+
+鬼狂歌：
+万般绝学唯洗地，天下英雄皆炸逼。
+题主显然没搞明白dota的bp究竟有何用，以及bp的精彩。简单来说，就是bp手围绕以下两点勾心斗角： 1、如何保证拿到自己趁手的英雄组合； 2、如何阻止对手拿到趁手的英雄组合，并且让对手的英雄组合被自己的英雄组合克制、至少是不能克制自己的英雄组合。 ——所以，dota的比赛bp的结果决定了一半的胜负，并非是吹的。 而b…
+
 1992年邓小平广东视察工作<br>
 https://www.bilibili.com/video/BV1ym421V7iH/
 
