--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -10,7 +10,7 @@ https://www.bilibili.com/video/BV1Rs411B7VP
 ![领悟](../pic/sub/ziran.JPG) <br>
  
 ------
-高胜美 - 杵歌
+高胜美 - 杵歌<br>
 https://www.bilibili.com/video/BV12m4y1A7DU/
 
 作曲: 山地民谣
