--- a/text/看书.md
+++ b/text/看书.md
@@ -181,7 +181,7 @@
 
 如果在第一种感觉中自我不受限制，那么在第二种感觉中就不会出现纯粹的渴望，而会出现因果性；因为自我那时可以产生某种外部事物，而它的驱力不会被限制在仅仅内在地确定自我。反之，如果自我不感觉到自身在渴望，那么它就不能感觉到自身受到限制，因为只有通过渴望的感觉，自我才从自身出发——只有通过这种感觉，自我和对自我才首次设定了某种应当存在于它之外的东西。
 
-这种渴望不仅对实践哲学，而且对整个科学学说都很重要。只有通过这种渴望，自我才被驱动到自身之外；只有通过这种渴望，外部世界才在自我中显现出来。
+这种渴望不仅对实践哲学，而且对整个知识学都很重要。只有通过这种渴望，自我才被驱动到自身之外；只有通过这种渴望，外部世界才在自我中显现出来。
 
 因此，这两者是综合统一在一起的，缺一不可。没有限制，就没有渴望；没有渴望，也就没有限制。——但这两者同时又完全是对立的。在限制的感觉中，“我”仅仅被感受为受苦的；而在渴望的感觉中，“我”也被感受为能动的。
 
@@ -263,9 +263,13 @@ x=1模m的解：   1 5 9 13 17
 把m分解成素数幂相乘的形式，那么模m的方程与一系列模p^a的方程等价，两个点没想明白，这里等价的定义是什么？为什么说是等价的？问了下ai，再结合自己的理解，
 就是如果模m成立，那么模p^a的一系列方程全部成立，如果有一个不成立，那么就不等价了，反过来也一样。p^a|m，而m|y^2-a，所以p^a|y^2-a，这里对整除传导性的深入分析不是这里要写的内容，可以简单举个例子感受一下，3|6,6|24,那么3必定整除24。反过来呢？所有素数整除同一个数，那么素数的乘积也必定整除这个数，比如5|20,2|20，那么5×2=10|20，因为两个素数之间没有公因子，如果是合数，可能有公因子被重复相乘了，举个例子384=3×128,只有3这一个因子，6|384，12|384，6和12都只有3一个因子，但是一乘起来就变成6×12=72含有2个因子3，即3^2，整除不了3×128
 
-接下来主要研究x^2=a模p^a（p^α）的形式，通过a=p^bu将这个方程分类。如果b>=a,那么p^a|a=x^2，这里的意思是x^2中p的因子个数大于a，然后再乘以一个与p无关的因子，接下来我们看看作者对这种情况有什么深入的讨论。先把a=p^bu进行分类，然后再对p^a中的a分类，分为奇数和偶数，a是偶数时a=2k，得到x的解是至少有k个p因子，否则p^2的因子个数少于2k，p^a不可能整除x^2，然后如果x>=p^2k+1，说明p^a整除x，这样的解等价于x取0。如果是奇数a=2k+1，至少有k+1个p因子，否则不能整除p^2k+1。但是为什么要划分成奇偶性？主要是由x^2中的2决定的，如果是x^3，那么可能就要写成3k+b的形式了，因为如果a=k，那么x的解不好表示，p因子的个数要引入一个0.5k。
+接下来主要研究x^2=a模p^a（p^α）的形式，通过a=p^bu将这个方程分类。如果b>=a,那么p^a|a=x^2，这里的意思是x^2中p的因子个数大于a，然后再乘以一个与p无关的因子，接下来我们看看作者对这种情况有什么深入的讨论。先把a=p^bu进行分类，然后再对p^a中的a分类，分为奇数和偶数，a是偶数时a=2k，得到x的解是至少有k个p因子，否则p^2的因子个数少于2k，p^a不可能整除x^2，然后如果x>=p^2k，说明p^a整除x，这样的解等价于x取0。如果是奇数a=2k+1，至少有k+1个p因子，否则不能被p^2k+1整除。但是为什么要划分成奇偶性？主要是由x^2中的2决定的，如果是x^3，那么可能就要写成3k+b的形式了，因为如果a=k，那么x的解不好表示，p因子的个数要引入一个0.5k。
 
-如果b<a，就是p^b<p^a，那么这次要对b进行奇偶分类，上次是对a进行奇偶分类。为什么b>=a是对a分类，而b<a时就变成了对b分类？先看到这里吧，以后有空再看，看数学书太累了。
+如果b<a，就是p^b<p^a，那么这次要对b进行奇偶分类，上次是对a进行奇偶分类。为什么b>=a是对a分类，而b<a时就变成了对b分类？之前的b>=a其实是x^2=0=p^a=p^b模p^a，之前是a取代了b，所以本质上也是对b进行分类。先看到这里吧，以后有空再看，看数学书太累了。、
+
+当b=2k时，由x^2=p^bu知道，p^k|x，这个没看出来，可以不整除吗？不整除说明x的p因子个数小于k，那么x平方后的个数就不可能大于2k。然后再设x=p^ky，就是给k个因子再配上一个系数，得到x^2=p^2ky^2=p^by^2=p^bu，就是x乘了后p因子个数到达2k后用b来表示，再约去p^b得到y^2=u(mod p^a-b)（看上一段，现在讨论的是b<a)的情况），讨论的结尾(13)式中有一个p不整除u的结果，没反应过来，需要好好想想。他是在前面设了一个a=p^bu的形式，如果u中还有p因子，全都移到了pb上，所以他这个形式中u是不含p因子的,这样处理后和9式相比 x方2等于p的b方u，此时a就没有p因子了，总结一下一开始a有p因子，然后把p因子全都移到pb上，此时u就没有p因子了，然后再约去p^b，把x^2=a的形式转换成了y^2=u的形式，形式不变，仅仅是得到了一个没有p因子的a，记为u。
+
+插入一个问题，at=bt模tm为什么可以约去t，k1tm+c=at，k2tm+c=bt，at-k1tm=bt-k2tm，a-k1m=b-k2m，所以对于一个同余式，无论是同乘一个数还是同除一个数都仍然是同余的。
 
 --------
 　　身经百战的胡铁花怎么会变成如此模样？<br>
