--- a/text/看书.md
+++ b/text/看书.md
@@ -271,7 +271,7 @@ x=1模m的解：   1 5 9 13 17
 
 插入一个问题，at=bt模tm为什么可以约去t，k1tm+c=at，k2tm+c=bt，前面两式中都有一个c使得at-k1tm=bt-k2tm，正因为都等于c，at和bt才同余，a-k1m=b-k2m，所以对于一个同余式，无论是同乘一个数还是同除一个数都仍然是同余的。
 
-再考虑b=2k+1，之前写到b=2k时，我们对于作者想要干什么完全是一头雾水，现在我们大概可以猜到b=2k+1的情况下可能也是为了约去a中的p因子。由于x中的p因子个数大于k，所以可以设为x=p^ky，代入x^2约去p^2k,得到y^2=pu(mod p^a-2k)，之前是b=2k，所以2k就直接用b来表示了，我们可以看到现在这个式子和之前的区别是，pu和u相比多了一个p，且2k不等于b，而是2k+1=b，这个条件直接来源于分类的前置条件。
+再考虑b=2k+1，之前写到b=2k时，我们对于作者想要干什么完全是一头雾水，现在我们大概可以猜到b=2k+1的情况下可能也是为了约去a中的p因子。由于x中的p因子个数大于k，所以可以设为x=p^ky，代入x^2约去p^2k,得到y^2=pu(mod p^a-2k)，之前是b=2k，所以2k就直接用b来表示了，我们可以看到现在这个式子和之前的区别是，pu和u相比多了一个p，且2k不等于b，而是2k+1=b，这个关系直接来源于分类的前置条件。
 
 接下来突然冒出来一个a-2k>a-b>=1，我们主要关注2点，这个式子是从哪里冒出来的，这个式子有什么作用。回顾我们对b的奇偶性讨论，是在b<a这个上级条件范畴之下的，a-b>=1就来自于a>b这个条件。然后我们当前的条件范畴是b=2k+1，所以a-b=a-2k-1<a-2k。好了，来源搞清楚了，接下来看看有什么作用，作者说要有这个不等式成立，才能有p|y，一时间没反应过来，我要仔细想想，难道没有这个不等式p就不一定整除y了？p和y都是什么，我已经完全忘记了，p来自于最早说的要研究x^2=a模p^a中的p因子，y是x约去p^k后剩下的因子，这两者之间有什么联系呢？ 还是把y^2=pu(mod p^a-2k)先写成普通形式吧 k1(p^a-2k)+c = pu,k2(p^a-2k)+c=y^2，上式都等于c，可得pu-k1(p^a-2k)=y^2-k2(p^a-2k)，这里我终于发现了a-2k>a-b>=1这个式子中a-2k就是我们在b=2k+1情况下约去p^k后的到的y^2=pu中的模p^(a-2k)中指数。所以(p^a-2k)>p^1也就是(p^a-2k)>=p^2，这里提一下，对于记忆力不好的人，当我们忘记了某个符号的出处再回忆起来是比较吃力的，对于分析能力强的人，把p^(a-2k)和p^a-2k写混淆后，但不引起思维混乱却是挺轻松的。再回到我们之前对p|y的讨论上来，p整除y说明，y中至少有1个p因子，如果p不整除y，说明y没有p因子，在pu-k1这个式子中，p整除左边所以也必定整除右边，再看等式右边y^2-k2(p^a-2k)，我们看到这个突然冒出来的不等式正是为了保证k2(p^a-2k)有p因子，p整除等号右边整体，又整除右边-号的右边，那么就必定整除左边的y^2，因为p是质数，所以不可能写成不同于p的素数积，此时y^2是乘积形式，要想被p整除，只能是p|y，更简单的理解，p|y^2，说明y^2中有p因子，那么这个p因子来自于哪里？只能来自于y，所以p|y。把p|y搞清楚后，接下来我猜作者要写的内容就是p|y后起到的作用。
 
