--- a/text/看书.md
+++ b/text/看书.md
@@ -275,7 +275,11 @@ x=1模m的解：   1 5 9 13 17
 
 接下来突然冒出来一个a-2k>a-b>=1，我们主要关注2点，这个式子是从哪里冒出来的，这个式子有什么作用。回顾我们对b的奇偶性讨论，是在b<a这个上级条件范畴之下的，a-b>=1就来自于a>b这个条件。然后我们当前的条件范畴是b=2k+1，所以a-b=a-2k-1<a-2k。好了，来源搞清楚了，接下来看看有什么作用，作者说要有这个不等式成立，才能有p|y，一时间没反应过来，我要仔细想想，难道没有这个不等式p就不一定整除y了？p和y都是什么，我已经完全忘记了，p来自于最早说的要研究x^2=a模p^a中的p因子，y是x约去p^k后剩下的因子，这两者之间有什么联系呢？ 还是把y^2=pu(mod p^a-2k)先写成普通形式吧 k1(p^a-2k)+c = pu,k2(p^a-2k)+c=y^2，上式都等于c，可得pu-k1(p^a-2k)=y^2-k2(p^a-2k)，这里我终于发现了a-2k>a-b>=1这个式子中a-2k就是我们在b=2k+1情况下约去p^k后的到的y^2=pu中的模p^(a-2k)中指数。所以(p^a-2k)>p^1也就是(p^a-2k)>=p^2，这里提一下，对于记忆力不好的人，当我们忘记了某个符号的出处再回忆起来是比较吃力的，对于分析能力强的人，把p^(a-2k)和p^a-2k写混淆后，但不引起思维混乱却是挺轻松的。再回到我们之前对p|y的讨论上来，p整除y说明，y中至少有1个p因子，如果p不整除y，说明y没有p因子，在pu-k1这个式子中，p整除左边所以也必定整除右边，再看等式右边y^2-k2(p^a-2k)，我们看到这个突然冒出来的不等式正是为了保证k2(p^a-2k)有p因子，p整除等号右边整体，又整除右边-号的右边，那么就必定整除左边的y^2，因为p是质数，所以不可能写成不同于p的素数积，此时y^2是乘积形式，要想被p整除，只能是p|y，更简单的理解，p|y^2，说明y^2中有p因子，那么这个p因子来自于哪里？只能来自于y，所以p|y。把p|y搞清楚后，接下来我猜作者要写的内容就是p|y后起到的作用。
 
-有了p|y后，就可以把y写成p的形式，令y=pt，代入到y^2=pu(mod p^a-2k)，得p^2t^2=pu(mod p^a-2k)，然后约掉一个p，在a-2k凑出a-2b，本来b=2k时可以直接把p^a-2k写成p^a-b，但由于b=2k+1时写不了，所以要想办法从p^a-2k中约掉一个p凑出b来，但y^2没有p，上面的一大段就是为了说明y中必定有p，这是y^2、pu、p^a-2k三者组成的同余关系所保证的。当y有p后，就达到了目的，所以约掉后写成pt^2=u(mod p^a-b)。我们再看前面p想要整除y需要不等式保证a-2k>=1，现在我们已经有不等式保证a-b>=1了，所以比较u=pt^2和y^2=pu的形式，都是X=pY的形式，所以可知p也整除u，这与之前的假设（u是不含p因子）矛盾。总结一下，本来a有p因子，然后把p因子提掉剩下一个没有p因子的u，现在在b=2k+1的情况，又证出来了u有p因子，那是因为假定了y有解，如果y有解那么它的形式就要受到一定约束，也就是y有p因子，这个形式代回到原方程，会导致u出现p因子，所以用反证法证明y无解。
+有了p|y后，就可以把y写成p的形式，令y=pt，代入到y^2=pu(mod p^a-2k)，得p^2t^2=pu(mod p^a-2k)，然后约掉一个p，在a-2k凑出a-2b，本来b=2k时可以直接把p^a-2k写成p^a-b，但由于b=2k+1时写不了，所以要想办法从p^a-2k中约掉一个p凑出b来，但y^2没有p，上面的一大段就是为了说明y中必定有p，这是y^2、pu、p^a-2k三者组成的同余关系所保证的。当y有p后，就达到了目的，所以约掉后写成pt^2=u(mod p^a-b)。我们再看前面p想要整除y需要不等式保证a-2k>=1，现在我们已经有不等式保证a-b>=1了，所以比较u=pt^2和y^2=pu的形式，都是X=pY的形式，所以可知p也整除u，这与之前的假设（u是不含p因子）矛盾。总结一下，本来a有p因子，然后把p因子提掉剩下一个没有p因子的u，现在在b=2k+1的情况，又证出来了u有p因子，那是因为假定了y有解，如果y有解那么它的形式就要受到一定约束，也就是y有p因子，这个形式代回到原方程，会导致u出现p因子，所以用反证法证明y无解。a-2k是>=2的，约掉一个p后得到a-2k-1=a-b还是>=1。
+
+写了这么多，终于得到引理1：给定一个同余方程x^2=a(mod p^a)，把a写成p^bu的形式，其中u没有p因子，接下来讨论b和a的大小关系，当b>=a相当于x^2=0=p^a（mod p^a），此时方程的解中要求x中p因子的个数大于a的一半。当b<a时，且b为奇数，方程x无解，当b=2k时，方程可以变形为y^2=u(mod p^a-b)，之前的注意力都放在了p不整除u上面，有个问题还没说，变形后的好处呢？方程的解是什么样的？当我写下上面这个问题时，我突然又明白了，这很可能是接下来要研究的主题，把一般的a转化成u，u和模的素数幂之间没有公因子，对于特殊的a-b=1可以写成y^2=u(mod p)，p和u互质，看了一眼定义1，果然很我想的差不多。首先是最早的x^2=a(mod m)然后把m写成素数幂之积，单独研究每个x^2=a(mod p^a)，再把a中的p约掉，得到y^2=u(mod p^a-b)，特别的，y^2=u(mod p)，p是素数，所以接下来可以只考虑(a,m)=1的情况。
+
+都写到这里了，干脆就把第一节写完吧，对于同余方程x^2=a(mod m)，(a,m)=1，接下来要定义出a的特征，如果x有解，就称a为模m的平方剩余，如果x无解，就称a为模m的平方非剩余。所以是否是平方剩余是a和m在某种相互关系中满足的一种特征。
 
 --------
 　　身经百战的胡铁花怎么会变成如此模样？<br>
