--- a/text/看书.md
+++ b/text/看书.md
@@ -267,9 +267,9 @@ x=1模m的解：   1 5 9 13 17
 
 如果b<a，就是p^b<p^a，那么这次要对b进行奇偶分类，上次是对a进行奇偶分类。为什么b>=a是对a分类，而b<a时就变成了对b分类？之前的b>=a其实是x^2=0=p^a=p^b模p^a，之前是a取代了b，所以本质上也是对b进行分类。先看到这里吧，以后有空再看，看数学书太累了。、
 
-当b=2k时，由x^2=p^bu知道，p^k|x，这个没看出来，可以不整除吗？不整除说明x的p因子个数小于k，那么x平方后的个数就不可能大于2k。然后再设x=p^ky，就是给k个因子再配上一个系数，得到x^2=p^2ky^2=p^by^2=p^bu，就是x乘了后p因子个数到达2k后用b来表示，再约去p^b得到y^2=u(mod p^a-b)（看上一段，现在讨论的是b<a)的情况），讨论的结尾(13)式中有一个p不整除u的结果，没反应过来，需要好好想想。他是在前面设了一个a=p^bu的形式，如果u中还有p因子，全都移到了pb上，所以他这个形式中u是不含p因子的,这样处理后和9式相比 x^2等于p^bu，此时a就没有p因子了，总结一下，一开始a有p因子，然后把p因子全都移到pb上，此时u就没有p因子了，然后再约去p^b，把x^2=a的形式转换成了y^2=u的形式，形式不变，仅仅是得到了一个没有p因子的a，记为u。
+当b=2k时，由x^2=p^bu知道，p^k|x，这个没看出来，可以不整除吗？不整除说明x的p因子个数小于k，那么x平方后的个数就不可能大于2k。然后再设x=p^ky，就是给k个因子再配上一个系数，得到x^2=p^2ky^2=p^by^2=p^bu，就是x乘了后p因子个数到达2k后用b来表示，再约去p^b得到y^2=u(mod p^a-b)（看上一段，现在讨论的是b<a的情况），讨论的结尾(13)式中有一个p不整除u的结果，没反应过来，需要好好想想。他是在前面设了一个a=p^bu的形式，如果u中还有p因子，全都移到了pb上，所以他这个形式中u是不含p因子的,这样处理后和9式相比 x^2等于p^bu，此时a就没有p因子了，总结一下，一开始a有p因子，然后把p因子全都移到pb上，此时u就没有p因子了，然后再约去p^b，把x^2=a的形式转换成了y^2=u的形式，形式不变，仅仅是得到了一个没有p因子的a，记为u。
 
-插入一个问题，at=bt模tm为什么可以约去t，k1tm+c=at，k2tm+c=bt，前面两式中都有一个c使得at-k1tm=bt-k2tm，正因为都等于c，at和bt才同余，a-k1m=b-k2m，所以对于一个同余式，无论是同乘一个数还是同除一个数都仍然是同余的。
+插入一个问题，at=bt模tm为什么可以约去t，k1tm+c=at，k2tm+c=bt，前面两式中都有一个c使得at-k1tm=bt-k2tm，正因为都等于c，at和bt才同余，约掉t后就是，a-k1m=b-k2m，所以对于一个同余式，无论是同乘一个数还是同除一个数都仍然是同余的。
 
 再考虑b=2k+1，之前写到b=2k时，我们对于作者想要干什么完全是一头雾水，现在我们大概可以猜到b=2k+1的情况下可能也是为了约去a中的p因子。由于x中的p因子个数大于k，所以可以设为x=p^ky，代入x^2约去p^2k,得到y^2=pu(mod p^a-2k)，之前是b=2k，所以2k就直接用b来表示了，我们可以看到现在这个式子和之前的区别是，pu和u相比多了一个p，且2k不等于b，而是2k+1=b，这个关系直接来源于分类的前置条件。
 
