--- a/text/看书.md
+++ b/text/看书.md
@@ -267,11 +267,14 @@ x=1模m的解：   1 5 9 13 17
 
 如果b<a，就是p^b<p^a，那么这次要对b进行奇偶分类，上次是对a进行奇偶分类。为什么b>=a是对a分类，而b<a时就变成了对b分类？之前的b>=a其实是x^2=0=p^a=p^b模p^a，之前是a取代了b，所以本质上也是对b进行分类。先看到这里吧，以后有空再看，看数学书太累了。、
 
-当b=2k时，由x^2=p^bu知道，p^k|x，这个没看出来，可以不整除吗？不整除说明x的p因子个数小于k，那么x平方后的个数就不可能大于2k。然后再设x=p^ky，就是给k个因子再配上一个系数，得到x^2=p^2ky^2=p^by^2=p^bu，就是x乘了后p因子个数到达2k后用b来表示，再约去p^b得到y^2=u(mod p^a-b)（看上一段，现在讨论的是b<a的情况），讨论的结尾(13)式中有一个p不整除u的结果，没反应过来，需要好好想想。他是在前面设了一个a=p^bu的形式，如果u中还有p因子，全都移到了pb上，所以他这个形式中u是不含p因子的,这样处理后和9式相比 x^2等于p^bu，此时a就没有p因子了，总结一下，一开始a有p因子，然后把p因子全都移到pb上，此时u就没有p因子了，然后再约去p^b，把x^2=a的形式转换成了y^2=u的形式，形式不变，仅仅是得到了一个没有p因子的a，记为u。
+当b=2k时，由x^2=p^bu知道，p^k|x，这个没看出来，可以不整除吗？不整除说明x的p因子个数小于k，那么x平方后的个数就不可能大于2k。难道x^2和p^bu所含的p因子个数不一样，就不可能模p^a同余？（是的，见如果一个数整除m和a）然后再设x=p^ky，就是给k个因子再配上一个系数，得到x^2=p^2ky^2=p^by^2=p^bu，就是x乘了后p因子个数到达2k后用b来表示，再约去p^b得到y^2=u(mod p^a-b)（看上一段，现在讨论的是b<a的情况），讨论的结尾(13)式中有一个p不整除u的结果，没反应过来，需要好好想想。他是在前面设了一个a=p^bu的形式，如果u中还有p因子，全都移到了pb上，所以他这个形式中u是不含p因子的,这样处理后和9式相比 x^2等于p^bu，此时a就没有p因子了，总结一下，一开始a有p因子，然后把p因子全都移到pb上，此时u就没有p因子了，然后再约去p^b，把x^2=a的形式转换成了y^2=u的形式，形式不变，仅仅是得到了一个没有p因子的a，记为u。
 
 插入一个问题，at=bt模tm为什么可以约去t，k1tm+c=at，k2tm+c=bt，前面两式中都有一个c使得at-k1tm=bt-k2tm，正因为都等于c，at和bt才同余，约掉t后就是，a-k1m=b-k2m，所以对于一个同余式，无论是同乘一个数还是同除一个数都仍然是同余的。
 
 再考虑b=2k+1，之前写到b=2k时，我们对于作者想要干什么完全是一头雾水，现在我们大概可以猜到b=2k+1的情况下可能也是为了约去a中的p因子。由于x中的p因子个数大于k，所以可以设为x=p^ky，代入x^2约去p^2k,得到y^2=pu(mod p^a-2k)，之前是b=2k，所以2k就直接用b来表示了，我们可以看到现在这个式子和之前的区别是，pu和u相比多了一个p，且2k不等于b，而是2k+1=b，这个关系直接来源于分类的前置条件。
+
+对于x^2=p^(2k+1)u(mod p^a),x中p因子的个数是大于k的，把同余式写成x^2-k1p^a=p^(2k+1)u-k2p^a,如果x中的
+p因子个数为k，那么x^2中的个数就是2k，上面这个等式是不可能成立的，对于a=b(mod m)的形式，如果一个数整除m和a，那么必定整除b（整除m加减a整体，也就整除b加减m整体，m是公用的）。所以x设为x=p^ky这种形式就很奇怪，这里y是含有p因子的，所以后面大张旗鼓的证明p|y就很奇怪，这里可能要再仔细想想。
 
 接下来突然冒出来一个a-2k>a-b>=1，我们主要关注2点，这个式子是从哪里冒出来的，这个式子有什么作用。回顾我们对b的奇偶性讨论，是在b<a这个上级条件范畴之下的，a-b>=1就来自于a>b这个条件。然后我们当前的条件范畴是b=2k+1，所以a-b=a-2k-1<a-2k。好了，来源搞清楚了，接下来看看有什么作用，作者说要有这个不等式成立，才能有p|y，一时间没反应过来，我要仔细想想，难道没有这个不等式p就不一定整除y了？p和y都是什么，我已经完全忘记了，p来自于最早说的要研究x^2=a模p^a中的p因子，y是x约去p^k后剩下的因子，这两者之间有什么联系呢？ 还是把y^2=pu(mod p^a-2k)先写成普通形式吧 k1(p^a-2k)+c = pu,k2(p^a-2k)+c=y^2，上式都等于c，可得pu-k1(p^a-2k)=y^2-k2(p^a-2k)，这里我终于发现了a-2k>a-b>=1这个式子中a-2k就是我们在b=2k+1情况下约去p^k后的到的y^2=pu中的模p^(a-2k)中指数。所以(p^a-2k)>p^1也就是(p^a-2k)>=p^2，这里提一下，对于记忆力不好的人，当我们忘记了某个符号的出处再回忆起来是比较吃力的，对于分析能力强的人，把p^(a-2k)和p^a-2k写混淆后，但不引起思维混乱却是挺轻松的。再回到我们之前对p|y的讨论上来，p整除y说明，y中至少有1个p因子，如果p不整除y，说明y没有p因子，在pu-k1这个式子中，p整除左边所以也必定整除右边，再看等式右边y^2-k2(p^a-2k)，我们看到这个突然冒出来的不等式正是为了保证k2(p^a-2k)有p因子，p整除等号右边整体，又整除右边-号的右边，那么就必定整除左边的y^2，因为p是质数，所以不可能写成不同于p的素数积，此时y^2是乘积形式，要想被p整除，只能是p|y，更简单的理解，p|y^2，说明y^2中有p因子，那么这个p因子来自于哪里？只能来自于y，所以p|y。把p|y搞清楚后，接下来我猜作者要写的内容就是p|y后起到的作用。
 
