--- a/text/看书.md
+++ b/text/看书.md
@@ -276,7 +276,7 @@ x=1模m的解：   1 5 9 13 17
 对于x^2=p^(2k+1)u(mod p^a),x中p因子的个数是大于k的，把同余式写成x^2-k1p^a=p^(2k+1)u-k2p^a,如果x中的
 p因子个数为k，那么x^2中的个数就是2k，上面这个等式是不可能成立的，对于a=b(mod m)的形式，如果一个数整除m和a，那么必定整除b（整除m加减a整体，也就整除b加减m整体，m是公用的）。所以x设为x=p^ky这种形式就很奇怪，这里y是含有p因子的，所以后面大张旗鼓的证明p|y就很奇怪，这里可能要再仔细想想。之所以设为这种形式，主要是想把p^(2k+1)u中的2k去掉，变为pu。当然也可以直接一点，既然x中的p因子个数>=k+1，那么x^2就>=2k+2，同余式改写的式子左边x^2-k1p^a约掉p^(2k+1)后还有p因子，所以p整除右边，得到p|u，矛盾。
 
-接下来突然冒出来一个a-2k>a-b>=1，我们主要关注2点，这个式子是从哪里冒出来的，这个式子有什么作用。回顾我们对b的奇偶性讨论，是在b<a这个上级条件范畴之下的，a-b>=1就来自于a>b这个条件。然后我们当前的条件范畴是b=2k+1，所以a-b=a-2k-1<a-2k。好了，来源搞清楚了，接下来看看有什么作用，作者说要有这个不等式成立，才能有p|y，一时间没反应过来，我要仔细想想，难道没有这个不等式p就不一定整除y了？p和y都是什么，我已经完全忘记了，p来自于最早说的要研究x^2=a模p^a中的p因子，y是x约去p^k后剩下的因子，这两者之间有什么联系呢？ 还是把y^2=pu(mod p^a-2k)先写成普通形式吧 k1(p^a-2k)+c = pu,k2(p^a-2k)+c=y^2，上式都等于c，可得pu-k1(p^a-2k)=y^2-k2(p^a-2k)，这里我终于发现了a-2k>a-b>=1这个式子中a-2k就是我们在b=2k+1情况下约去p^k后的到的y^2=pu中的模p^(a-2k)中指数。所以(p^a-2k)>p^1也就是(p^a-2k)>=p^2，这里提一下，对于记忆力不好的人，当我们忘记了某个符号的出处再回忆起来是比较吃力的，对于分析能力强的人，把p^(a-2k)和p^a-2k写混淆后，但不引起思维混乱却是挺轻松的。再回到我们之前对p|y的讨论上来，p整除y说明，y中至少有1个p因子，如果p不整除y，说明y没有p因子，在pu-k1这个式子中，p整除左边所以也必定整除右边，再看等式右边y^2-k2(p^a-2k)，我们看到这个突然冒出来的不等式正是为了保证k2(p^a-2k)有p因子，p整除等号右边整体，又整除右边-号的右边，那么就必定整除左边的y^2，因为p是质数，所以不可能写成不同于p的素数积，此时y^2是乘积形式，要想被p整除，只能是p|y，更简单的理解，p|y^2，说明y^2中有p因子，那么这个p因子来自于哪里？只能来自于y，所以p|y。把p|y搞清楚后，接下来我猜作者要写的内容就是p|y后起到的作用。
+接下来突然冒出来一个a-2k>a-b>=1，我们主要关注2点，这个式子是从哪里冒出来的，这个式子有什么作用。回顾我们对b的奇偶性讨论，是在b<a这个上级条件范畴之下的，a-b>=1就来自于a>b这个条件。然后我们当前的条件范畴是b=2k+1，所以a-b=a-2k-1<a-2k。不是突然冒出来的，y^2=pu(mod p^a-2k)这个同余式中就有a-2k，可以看书上，含有a-2k这两个式子是挨着的，应该不用什么注意力吧。好了，来源搞清楚了，接下来看看有什么作用，作者说要有这个不等式成立，才能有p|y，一时间没反应过来，我要仔细想想，难道没有这个不等式p就不一定整除y了？p和y都是什么，我已经完全忘记了，p来自于最早说的要研究x^2=a模p^a中的p因子，y是x约去p^k后剩下的因子，这两者之间有什么联系呢？ 还是把y^2=pu(mod p^a-2k)先写成普通形式吧 k1(p^a-2k)+c = pu,k2(p^a-2k)+c=y^2，上式都等于c，可得pu-k1(p^a-2k)=y^2-k2(p^a-2k)，这里我终于发现了a-2k>a-b>=1这个式子中a-2k就是我们在b=2k+1情况下约去p^k后的到的y^2=pu中的模p^(a-2k)中指数。所以(p^a-2k)>p^1也就是(p^a-2k)>=p^2，这里提一下，对于记忆力不好的人，当我们忘记了某个符号的出处再回忆起来是比较吃力的，对于分析能力强的人，把p^(a-2k)和p^a-2k写混淆后，但不引起思维混乱却是挺轻松的。再回到我们之前对p|y的讨论上来，p整除y说明，y中至少有1个p因子，如果p不整除y，说明y没有p因子，在pu-k1这个式子中，p整除左边所以也必定整除右边，再看等式右边y^2-k2(p^a-2k)，我们看到这个突然冒出来的不等式正是为了保证k2(p^a-2k)有p因子，p整除等号右边整体，又整除右边-号的右边，那么就必定整除左边的y^2，因为p是质数，所以不可能写成不同于p的素数积，此时y^2是乘积形式，要想被p整除，只能是p|y，更简单的理解，p|y^2，说明y^2中有p因子，那么这个p因子来自于哪里？只能来自于y，所以p|y。把p|y搞清楚后，接下来我猜作者要写的内容就是p|y后起到的作用。
 
 有了p|y后，就可以把y写成p的形式，令y=pt，代入到y^2=pu(mod p^a-2k)，得p^2t^2=pu(mod p^a-2k)，然后约掉一个p，在a-2k上凑出a-b，本来b=2k时可以直接把p^a-2k写成p^a-b，但由于b=2k+1时写不了，所以要想办法从p^a-2k中约掉一个p凑出b来，但y^2没有p，上面的一大段就是为了说明y中必定有p，这是y^2、pu、p^a-2k三者组成的同余关系所保证的。当y有p后，就达到了目的，所以约掉后写成pt^2=u(mod p^a-b)。我们再看前面p想要整除y需要不等式保证a-2k>=1，现在我们已经有不等式保证a-b>=1了，所以比较u=pt^2和y^2=pu的形式，都是X=pY的形式，所以可知p也整除u，这与之前的假设（u是不含p因子）矛盾。总结一下，本来a有p因子，然后把p因子提掉剩下一个没有p因子的u，现在在b=2k+1的情况，又证出来了u有p因子，那是因为假定了y有解，如果y有解那么它的形式就要受到一定约束，也就是y有p因子，这个形式代回到原方程，会导致u出现p因子，所以用反证法证明y无解。a-2k是>=2的，约掉一个p后得到a-2k-1=a-b还是>=1。最后说一下我之前的一个理解错误，p^2t^2=pu(mod p^a-2k)约掉一个p并不是为了凑出mod p^a-b，而是为了凑出X=pY的形式。
 
