--- a/text/看书.md
+++ b/text/看书.md
@@ -1,3 +1,11 @@
+
+许敬宗家中有一座小池塘，我为此作赋赐给他。
+
+在这清爽的秋季开始之时，碧绿的池水凝聚着光彩，引来泾水渭水的余润，环绕着这方寸之间的小池塘。竹子分散成丛发出和谐的声响，各种草木虽色彩各异却同样芬芳。在此徘徊踯躅，流连忘返，自得其乐。池水上叠起的风纹一层又一层，回折的水流一曲又一曲。映照垂下的兰草而显得更加翠绿，轻轻翻动着青苔，泛起绿色涟漪。这狭小如镜的池面仅有数寻，漂浮的小船如芥子般已然沉没。岸边涌现菱花，波心折射着莲花的倒影。即使减少一滴微小的水流而变浅，只要再添一滴便又恢复深度。
+
+此时景色落在池边，雾气笼罩着稀疏的竹林：舒展卷曲的是澄澈的霞光彩色，高高低低的是破碎的月轮；露水停留在鸟的整个翅膀上，隐约可见游鱼的半截鳞片。池岸随着岁月或许会改变，但水流与日月同在，永远焕然一新。虽然与浩瀚的大海相比感到惭愧，但也足以净化人的心灵和精神。
+
+-------
 豫卦
 
 ▅▅  &nbsp;▅▅ (上六)<br>
