--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,6 +1,6 @@
 2025年想法：
 
-最新 6.29：
+最新 7.1：
 
 Larry Wolff - Face Of The Enemy
 
@@ -8,6 +8,10 @@ Larry Wolff - Face Of The Enemy
 https://www.bilibili.com/video/BV1Rs411B7VP
 
 ![领悟](../pic/sub/ziran.JPG) <br>
+
+少年张三丰 第38集
+
+![蒙眼](../pic/sub/mengyan1.JPG) 
  
 ------
 高胜美 - 杵歌<br>
