--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,27 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 6.29：
+最新 7.2：
 
+姜育恆 - 再回首
+
+作词:陈乐融 作曲:卢冠廷
+
+再回首 雲遮斷歸途<br>
+再回首 荊棘密布<br>
+今夜不會再有 難捨地舊夢<br>
+曾經與你有的夢 今後要向誰訴說<br>
+再回首 背影已遠走<br>
+再回首 淚眼朦朧<br>
+留下你的祝福 寒夜溫暖我<br>
+不管明天要面對 多少傷痛和迷惑<br>
+
+曾經在幽幽暗暗反反覆覆中追問<br>
+才知道平平淡淡從從容容才是真<br>
+再回首 恍然如夢 <br>
+再回首 我心依舊<br>
+只有那無盡的長路 伴着我
+
+------
 王英姿 - 月亮船
 
 作词: 王浩
