--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,8 @@
+
+《长恨歌》，白居易写长篇叙事诗，天下第一人。 <br>
+https://www.bilibili.com/video/BV1uC4y1V732/
+
+---------
 Dota2的BP策略性强吗？ - 鬼狂歌的回答 <br>
 https://www.zhihu.com/question/35194110/answer/62261733
 
