--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 7.12：
 
+我突然想起我还写了一个高端分享社区的页面，什么提问者回答者之类的，现在再看真的好尴尬。
+
+-------
 八仙过海主题曲伴奏 人说天上好<br>
 https://5sing.kugou.com/bz/2007164.html
 
