--- a/text/看书.md
+++ b/text/看书.md
@@ -1,5 +1,5 @@
 
-　　主席：今天我找你们来就是想研究一下坂田的文章。坂田说基本粒子不是不可分的，电子是可分的。他们这样说，是站在辩证唯物主义立场上的。
+　　毛泽东：今天我找你们来就是想研究一下坂田的文章。坂田说基本粒子不是不可分的，电子是可分的。他们这样说，是站在辩证唯物主义立场上的。
 
 　　世界是无限的。世界在时间上、在空间上都是无穷无尽的，在太阳系外有无数个恒星，它们组成银河系。银河系以外，又有无数个银河系。宇宙从大的方面来看，是无限的。宇宙从小的方面来看，也是无限的。不但原子可分，原子核也可分，而且可以无限的分割下去。庄子讲：“一尺之棰，日取其半，万世不竭。”这是对的。因此，我们对世界的认识也是无穷无尽的。要不然，物理学这门科学就不再发展了。如果我们的认识是有穷尽的，我们已经把一切都认识到了，还要我们这些人干什么？
 
@@ -7,11 +7,11 @@
 
 　　主席：现在我们对许多事情还认识不清楚。认识总是在发展，有了大望远镜，我们看到的星星就更加多了。说到太阳系和地球，一直到现在还没有推翻康德的星云假说——地球、太阳都是由很热很热的气体冷凝而成的。我们的地球大概还在青年时期，我们的地球已变得愈来愈大。因为每天都有不少东西投到地球上来，如陨石、阳光等。太阳大概已经到中年，现在的太阳已经不那么热了。如果地面上的阳光那么强，有一百度，人怎么受得了？太阳表面温度有五、六千度，在太阳表面上面还有一层温度有一、二千度。如果说对太阳我们搞不十分清楚，从太阳到地球中间这一大块地方也还搞不清楚。现在有了人造卫星，这方面的认识就渐渐多起来了。地球上气候变化也不清楚，这也要研究。关于冰川问题，科学家还在争论。李四光是主张每隔百万年左右有一个冰川时期。到那时候，生物界又会起一个很大的变化。古时候的恐龙就经受不了冰川时期的寒冷而灭绝了。人是产生在最近两次冰川之间的，以后来到冰川时期，对人说来是一个问题，人要准备对付下一个冰川的来临。
 
-　　×××：主席方才说到望远镜，使我想起一个问题，我们能不能把望远镜、人造卫星等等概括成“认识工具”这个概念？
+　　于光远：主席方才说到望远镜，使我想起一个问题，我们能不能把望远镜、人造卫星等等概括成“认识工具”这个概念？
 
 　　主席：你说的这个“认识工具”的概念有些道理。认识工具当中要包括镬头、机器等等。人的认识来源于实践。我们用镬头、机器等等改造世界，我们的认识就深入了。工具是人器官的延长。镬头就是手臂的延长，望远镜是眼睛的延长，身体、五官都可以延长。富兰克林说人是制造工具的动物。中国人说，人为万物之灵。动物也有灵长类，但是猴子不知道制造棍子打果子。在动物的头脑里，就没有概念。
 
-　　×××：哲学书里通常只以个人作为认识的主体，但是在实际生活中认识的主体不是一个一个的人，而常常是一个集体，如我们党就是一个认识的主体，这样的看法对不对？
+　　于光远：哲学书里通常只以个人作为认识的主体，但是在实际生活中认识的主体不是一个一个的人，而常常是一个集体，如我们党就是一个认识的主体，这样的看法对不对？
 
 　　主席：阶级就是一个认识的主体。最初工人阶级是一个自在阶级，那时他对资本主义没有认识。以后就从自在阶级发展到自为阶级。这时候它对资本主义就有了认识。这就是以阶级为主体的认识的发展。
 
@@ -23,11 +23,11 @@
 
 　　主席：什么东西都是既守恒又不守恒。宇宙守恒，后来在美国的中国科学家李政道和扬振宁说它不守恒。质量守恒，能量守恒，是不是也是这样？世界上没有绝对不变的东西。变，不变，又变，又不变，组成了宇宙。守恒又不守恒，这就是既平衡又不平衡。也还有平衡完全破裂的情形。发电机是一个说明运动转化的很好的例子，在煤燃烧时运动形态是什么？
 
-　　×××：是化合物中原子外层电子改变运动轨道时放出来的能。
+　　于光远：是化合物中原子外层电子改变运动轨道时放出来的能。
 
 　　主席：这种形态转化为使水蒸汽体积膨胀的运动。
 
-　　×××：这是分子运动而产生功能。
+　　于光远：这是分子运动而产生功能。
 
 　　主席：然而又使发电机的转子旋转，这是机械运动，最后在铜线、铅线发出电来。
 
@@ -43,13 +43,19 @@
 
 　　主席：曹雪芹写《红楼梦》还是想补天，想补封建制的天。但是《红楼梦》里写的却是封建家族的衰落。可以说是曹雪芹的世界观和他的创作发生矛盾，曹雪芹的家是在雍正年里衰落的。康熙有许多儿子，其中一个是雍正。雍正搞特务机关压迫他的对手，把康熙的另外两—个儿子，好像是第九、十个儿子，一个改姓猪，一个改姓狗。
 
-　　主席：分解很重要。庖丁解牛。恩格斯在谈到医学的时候，也非常重视解剖学。医学是建筑在解剖学的基础上面的。
+　　毛泽东：分解很重要。庖丁解牛。恩格斯在谈到医学的时候，也非常重视解剖学。医学是建筑在解剖学的基础上面的。
 
 　　细胞的起源问题要研究一下。细胞有细胞核，细胞质和细胞膜。细胞是有结构的，在细胞以前一定有非细胞。细胞之前究竟是什么？究竟怎样从非细胞变为细胞？苏联有个女科学家研究这个问题没有结果。
 
-　　×××：我国在罗马举行的国际外科会议上报告了断手再植后，美国人说他们摸不清中国科学技术的底，有点害怕我们。
+　　于光远：我国在罗马举行的国际外科会议上报告了断手再植后，美国人说他们摸不清中国科学技术的底，有点害怕我们。
 
 　　主席：有点怕，是好事，不怕倒不好了。我们有点怕美国，因为美国是我们的敌人。美国有点怕我们，说明我们是美国的敌人，而且是有力量的敌人。在科学技术上应该注意保密。不让他们把我们的底摸去。”
+
+　　*木兰花慢中秋饮酒将旦，客谓前人诗词有赋待月，无送月者，因用天向体赋。
+
+　　可怜今夕月，向何处，去悠悠？是别有人间，那边才见，光影东头？
+
+　　是天外，在汗漫，但长风浩浩送中秋？飞镜无根谁系，妲娥不嫁谁留？
 
 -------
 许敬宗家中有一座小池塘，我为此作赋赐给他。
