--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -33,7 +33,7 @@ https://5sing.kugou.com/bz/3187659.html
 187集15分27秒：田中公正 - 海贼
 
 -------
-我突然想起我还写了一个高端分享社区的页面，什么提问者回答者之类的，现在再看真的好尴尬。
+我突然想起我还写过一个高端分享社区的页面，什么提问者回答者之类的，现在再看真的好尴尬。
 
 -------
 八仙过海主题曲伴奏 人说天上好<br>
